<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_1"
    tools:context=".view.Approval.LeaveFormFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_66dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/value_30dp"
            android:layout_height="@dimen/value_30dp"
            android:layout_marginStart="@dimen/value_24dp"
            android:layout_marginTop="@dimen/value_20dp"
            android:layout_marginBottom="@dimen/value_20dp"
            android:src="@drawable/request_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_request"
            android:fontFamily="@font/inter_font"
            android:textColor="@color/black"
            android:textSize="@dimen/value_17dp"
            android:layout_marginLeft="@dimen/value_16dp"
            android:layout_marginTop="@dimen/value_20dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/casual_leave"
        android:textColor="@color/black"
        android:textSize="@dimen/value_20dp"
        android:textFontWeight="@integer/bold"
        android:fontFamily="@font/inter_font"
        android:layout_marginStart="@dimen/value_24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginStart="@dimen/value_24dp"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/value_13dp"
        android:fontFamily="@font/inter_font"
        android:layout_marginTop="@dimen/value_34dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/value_24dp"
            android:text="@string/nico"
            android:textColor="@color/black"
            android:textSize="@dimen/value_17dp"
            android:fontFamily="@font/inter_font"
            android:textFontWeight="@integer/medium"
            android:layout_marginTop="@dimen/value_8dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/value_38dp"
            android:layout_height="@dimen/value_38dp"
            android:layout_marginRight="@dimen/value_32dp"
            app:cardCornerRadius="@dimen/value_8dp"
            app:cardBackgroundColor="@color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_1"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <View
        android:layout_width="360dp"
        android:layout_height="@dimen/value_1dp"
        android:background="@color/grey_2"
        android:layout_marginTop="@dimen/value_4dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/value_1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_marginStart="@dimen/value_24dp"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/value_13dp"
        android:fontFamily="@font/inter_font"
        android:layout_marginTop="@dimen/value_20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/value_24dp"
            android:text="@string/sophia"
            android:textSize="@dimen/value_17dp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_font"
            android:textFontWeight="@integer/medium"
            android:layout_marginTop="@dimen/value_8dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/value_38dp"
            android:layout_height="@dimen/value_38dp"
            android:layout_marginRight="@dimen/value_32dp"
            app:cardCornerRadius="@dimen/value_8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sophia"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <View
        android:layout_width="360dp"
        android:layout_height="@dimen/value_1dp"
        android:background="@color/grey_2"
        android:layout_marginTop="@dimen/value_5dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/value_1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_marginStart="@dimen/value_24dp"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/value_13dp"
            android:fontFamily="@font/inter_font"
            android:layout_marginTop="@dimen/value_20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:layout_marginLeft="@dimen/value_148dp"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/value_13dp"
            android:fontFamily="@font/inter_font"
            android:layout_marginTop="@dimen/value_20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/value_4dp">

        <TextView
            android:layout_width="@dimen/value_136dp"
            android:layout_height="@dimen/value_40dp"
            android:layout_marginStart="@dimen/value_24dp"
            android:text="@string/start_date"
            android:fontFamily="@font/inter_font"
            android:textSize="@dimen/value_17dp"
            android:textFontWeight="@integer/medium"
            android:textColor="@color/black"
            android:background="@drawable/date_layout"
            android:textAlignment="center"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="@dimen/value_136dp"
            android:layout_height="@dimen/value_40dp"
            android:layout_marginStart="@dimen/value_42dp"
            android:text="@string/end_date"
            android:fontFamily="@font/inter_font"
            android:textSize="@dimen/value_17dp"
            android:textFontWeight="@integer/medium"
            android:textColor="@color/black"
            android:background="@drawable/date_layout"
            android:textAlignment="center"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_days"
        android:layout_marginStart="@dimen/value_24dp"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/value_13dp"
        android:fontFamily="@font/inter_font"
        android:layout_marginTop="@dimen/value_20dp"/>
    <TextView
        android:layout_width="@dimen/value_136dp"
        android:layout_height="@dimen/value_40dp"
        android:layout_marginStart="@dimen/value_24dp"
        android:text="@string/two_days"
        android:fontFamily="@font/inter_font"
        android:textSize="@dimen/value_17dp"
        android:textFontWeight="@integer/medium"
        android:textColor="@color/black"
        android:background="@drawable/date_layout"
        android:paddingStart="@dimen/value_10dp"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/value_5dp"
        tools:ignore="RtlCompat" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        android:layout_marginStart="@dimen/value_24dp"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/value_13dp"
        android:fontFamily="@font/inter_font"
        android:layout_marginTop="@dimen/value_20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_reason"
        android:layout_marginTop="@dimen/value_5dp"
        android:layout_marginStart="@dimen/value_24dp"
        android:layout_marginEnd="@dimen/value_24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_font"
        android:textSize="@dimen/value_17dp"
        android:textFontWeight="@integer/medium"/>

    <View
        android:layout_width="360dp"
        android:layout_height="@dimen/value_1dp"
        android:background="@color/grey_2"
        android:layout_marginTop="@dimen/value_15dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/value_1dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_50dp"/>


</LinearLayout>