<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_1"
    android:orientation="vertical"
    tools:context=".view.Approval.HistoryFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/tab_text_color"
        app:tabTextAppearance="@style/TabTextStyle"
        android:backgroundTint="@color/white"
        app:tabIndicatorColor="@color/maroon">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approved" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejected"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_0dp"
        android:layout_weight="1" />


</LinearLayout>