<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_top"
    android:backgroundTint="@color/white"
    android:id="@+id/bottom_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        android:layout_gravity="center_horizontal">
        
        <ImageView
            android:id="@+id/close_bottom_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_down"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/value_10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_font"
            android:text="@string/decline_remarks"
            android:layout_marginStart="@dimen/value_24dp"
            android:layout_marginTop="@dimen/value_20dp"
            android:textFontWeight="@integer/medium"
            android:textSize="@dimen/value_17dp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/value_24dp"
            android:layout_marginStart="@dimen/value_24dp"
            android:gravity="top|start"
            android:hint="@string/remarks"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="4"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/value_13dp"/>


        <Button
            android:id="@+id/decline_submit_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_48dp"
            android:layout_marginTop="@dimen/value_40dp"
            android:layout_marginBottom="@dimen/value_30dp"
            android:layout_marginEnd="@dimen/value_24dp"
            android:layout_marginStart="@dimen/value_24dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/inter_font"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/value_17dp"
            app:cornerRadius="@dimen/value_5dp"/>
        
    </LinearLayout>


</LinearLayout>